release-data/changelogs/7.2/plugins/vault.adoc
= Changelogs for Rudder plugin vault 7.2.\* versions

== vault-7.2.10-2.1 (2023-09-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.9-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.8-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.7-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.6-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.5-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.4-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.3-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.2-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.1-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.0-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.0.rc1-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== vault-7.2.0.beta1-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 7.2 series and therefore all installations of 7.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

